@@ -27,6 +27,7 @@
 
 const char	*progname = NULL;
 const char	title_message[] = "Zabbix Get";
+const char	syslog_app_name[] = "zabbix_get";
 const char	usage_message[] = "[-hV] -s <host name or IP> [-p <port>] [-I <IP address>] -k <key>";
 
 const char	*help_message[] = {
